# barbieri-playground

./: README
c-tests/: introspection.c
curl-websocket/: .gitignore  Makefile  autobahn-testee.c  curl-websocket-utils.c  curl-websocket.c  curl-websocket.h  main.c
docker/distroless/python/: .flake8  Dockerfile  README.md  check.sh  docker_entrypoint.py  dockerfile-example-app.py  pyproject.toml  test.sh
dot-files/: README  Xresources  edje-lua-mode.el  edje-mode.el  emacs  pastebin.el  pyrex-mode.el  taskjuggler-mode.el  vimrc  zshrc
easy_tapioca/: easy_tapioca.py  test.py
efl-tests/: README
efl-win-build/: README.md  efl-win64-install.py
elf-utils/: runtime-create.sh  show-deps.py
evas-img/: Makefile  evas-img-resizer.c  evas-img-viewer.c
get_ip/: ifaddr.c  ifaddr.py
home-assistant/: .gitignore  Pipfile  README.md  gen-delayed-service-sequence.py  setup.py
ipc/: Makefile  marshaller-string-array.c  marshaller-string-array.h  test-marshaller-string-array.c
irssi/: config.sample  k-s.theme
irssi-scripts/: phone-ui.pl
kiwi-howto/: kiwi-howto.tex
klogger/: klogger.c
liblogger/: README.txt  liblogger.py
macbook-pro-backlights/: Makefile  macbook-pro-backlight-common.c
openvpn/: README.md  create-client-config.sh  server.conf
path-optimizer/: Makefile  path-optimizer.c
python/: c-symbols-of-lib.py  coverart-amazon  datecalc.py  gw.py  py-httpd.py  rgb16bpp.py  svn-git-am.py  unzip-safenames.py
rectangular-areas/: Makefile  rect_splitter.c  rect_splitter.h  rect_splitter_test.c  split.py  tests.py
run-length-encoding/: Makefile  rle.h  (+5 more)
(+247 files in other folders)
