[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.poetry]
name = "distroless-docker-entrypoint"
version = "1.0.0"
description = "Docker entrypoint to use gcr.io/distroless/python3 as base"
authors = ["Gustavo Sverzut Barbieri <barbieri@profusion.mobi>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-builtins = "^2.5.0"
flake8-colors = "^0.1.9"
flake8-comprehensions = "^3.16.0"
flake8-deprecated = "^2.2.1"
flake8-module-name = "^0.2.0"
flake8-requirements = "^2.2.1"
flake8-tidy-imports = "^4.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
